--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.1",
 		"@nextui-org/button": "2.0.34",
 		"@nextui-org/card": "^2.0.31",
 		"@nextui-org/code": "2.0.29",
@@ -27,6 +28,7 @@
 		"@spotlightjs/spotlight": "^2.0.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "~11.1.1",
+		"gsap": "^3.12.5",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-sitemap": "^4.2.3",
